<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="vm"
            type="kr.co.releasetech.kiosk.view.activity.order.OrderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textsize" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:textColor="@color/white"
            android:textSize="@dimen/default_textsize" />

        <TextView
            android:id="@+id/success_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/payment_success"
            android:textSize="@dimen/default_textsize" />

        <TextView
            android:id="@+id/failed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/payment_failed"
            android:textSize="@dimen/default_textsize" />

    </LinearLayout>


</layout>