<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="kr.co.releasetech.kiosk.model.realm.Order" />

        <variable
            name="vm"
            type="kr.co.releasetech.kiosk.view.activity.order.OrderViewModel" />
    </data>


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_admin_margin"
        android:background="@drawable/box_list_item"
        android:onClick="@{ () -> vm.orderDetail(item) }"
        android:orientation="vertical"
        android:padding="@dimen/activity_admin_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />


            <TextView
                android:id="@+id/order_number_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />


            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_name"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />


            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_type"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />

            <TextView
                android:id="@+id/takeout_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment_is_success"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />

            <TextView
                android:id="@+id/success_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/failed_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment_failed"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />

            <TextView
                android:id="@+id/failed_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="@dimen/default_textsize" />

        </LinearLayout>
    </LinearLayout>


</layout>