<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="kr.co.releasetech.kiosk.view.activity.paymentdetail.PaymentDetailViewModel" />

        <variable
            name="item"
            type="kr.co.releasetech.kiosk.model.realm.Payment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:background="@drawable/box_dialog"
            android:gravity="center"
            android:padding="@dimen/activity_admin_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/tran_no"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ item.tranNo }"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/approval_num"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ item.approvalNum.toString() }"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/approval_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ item.approvalDate.toString() }"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/tran_type"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:id="@+id/trans_type_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/card_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ item.cardName.toString() }"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/card_num"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@{ item.cardNum.toString() }"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/total_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:id="@+id/total_amount_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="0원"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/tax"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:id="@+id/tax_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="0원"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/installment"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />


                    <TextView
                        android:id="@+id/installment_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_textsize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginTop="@dimen/input_margin"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/receipt_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginRight="@dimen/input_margin"
                        android:fontFamily="@font/notosans_medium"
                        android:gravity="center"
                        android:onClick="@{ () -> vm.print(item)}"
                        android:text="@string/receipt"
                        android:textSize="@dimen/btn_textsize" />

                    <Button
                        android:id="@+id/refund_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginRight="@dimen/input_margin"
                        android:fontFamily="@font/notosans_medium"
                        android:gravity="center"
                        android:onClick="@{ () -> vm.refundRequest(item)}"
                        android:text="@string/refund"
                        android:textSize="@dimen/btn_textsize" />

                    <Button
                        android:id="@+id/close_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginRight="@dimen/input_margin"
                        android:fontFamily="@font/notosans_medium"
                        android:gravity="center"
                        android:onClick="@{ () -> vm.close() }"
                        android:text="@string/close"
                        android:textSize="@dimen/btn_textsize" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:visibility="gone" />

    </FrameLayout>

</layout>