<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="kr.co.releasetech.kiosk.view.activity.selectprint.SelectPrintViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_dialog"
            android:orientation="vertical"
            android:padding="@dimen/dialog_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/input_margin"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_medium"
                android:gravity="center"
                android:text="@string/u_want_receipt_print"
                android:textColor="@color/input_textcolor"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/white_btn"
                    android:fontFamily="@font/notosans_medium"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:onClick="@{() -> vm.cancel()}"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/confirm_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/theme_btn_5"
                    android:fontFamily="@font/notosans_medium"
                    android:gravity="center"
                    android:onClick="@{ () -> vm.confirm() }"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</layout>