<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="kr.co.releasetech.kiosk.view.activity.delete.DeleteViewModel" />
    </data>


    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark_transparent">

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_dialog"
            android:padding="@dimen/dialog_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_medium"
                android:layout_marginRight="@dimen/input_margin"
                android:text="@string/do_u_want_delete"
                android:textColor="@color/input_textcolor"
                android:textSize="@dimen/input_textsize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancel_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:fontFamily="@font/notosans_medium"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClose()}"
                    android:layout_marginRight="@dimen/input_margin"
                    android:text="@string/cancel"
                    android:textSize="@dimen/btn_textsize" />

                <Button
                    android:id="@+id/confirm_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:fontFamily="@font/notosans_medium"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/input_margin"
                    android:text="@string/confirm"
                    android:textSize="@dimen/btn_textsize" />
            </LinearLayout>


        </LinearLayout>


    </FrameLayout>
</layout>
